# AmyloGramPy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
evidence/: demo_input.fasta
